Fix dropdown expand state and add disabled prop when sidebar is collapsed

--- a/src/components/widgets/Salesman/Sidebar/LinksDropdown/index.module.scss
+++ b/src/components/widgets/Salesman/Sidebar/LinksDropdown/index.module.scss
@@ -70,3 +70,7 @@
     min-width: 24px !important;
     width: 24px !important;
 }
+
+.hidden {
+    display: none !important;
+}
